# ComfyUI-Conquest-Chatterbox

./: README.md  __init__.py  nodes.py  pyproject.toml
modules/: chatterbox_handler.py
src/chatterbox/: __init__.py  audio_editing.py  tokenization.py  tts.py  vc.py
src/chatterbox/models/t3/: t3.py
src/chatterbox/models/t3/inference/: alignment_stream_analyzer.py
src/chatterbox/models/t3/modules/: t3_config.py
